--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
 <div class="bloco-a">
 <section class="banner">
     <div class="b-conteudo b-box">
-        <h2>Seu site é a primeira impressão que seu cliente tem da sua emprlsesa.</h2>
-
-        <p>Para o sucesso de sua estratégia digital é preciso ter um site moderno, bonito, rápido e funcionar em qualquer dispositivo.</p>
-        <p>Ainda tem dúvida sobre qual tipo de site sua empresa precisa? Solicite uma consultoria gratuita!</p>
-        <button class="a-btn">Solicitar orçamento</button>
+        <h2>agência especializada em criação de site em Wordpress</h2>
+        <p>A CNDL/SPC Brasil fez uma pesquisa que revela que 97% dos internautas buscam informações sobre o produto antes de comprar na loja física. </p><br />
+        <p>Para ajudar o seu negócio a ser encontrado online, criamos o seu site sob demanda de acordo com as regras de negócios. Tudo isso dentro do painel administrativo do Wordpress para você conseguir editar o conteúdo sem precisar de um programador.</p>
+        <button class="a-btn" style="width:50%">Solicitar orçamento</button>
 
     </div>
 
@@ -57,11 +56,9 @@
 <section class="banner veloz">
 
     <div class="b-conteudo b-box">
-        <h2>Porque a Developoc?</h2>
+        <h2>Seu site é a primeira impressão que seu cliente tem da sua empresa</h2>
 
-        <p>A hack é uma agência que atua com Marketing digital e tem como ênfase o trabalho com Gestão de redes sociais, criação de sites e identidade visual  para profissionais liberais, micro e pequenas empresas que querem se destacar na internet.
-
-            Mas, por que Hack? hack é um termo inglês que em informática indica aquele que possui o interesse e o conhecimento para fazer transformações e melhorias em um sistema e é exatamente esse o nosso objetivo. Transformar e melhorar a forma como sua empresa se posiciona e é vista no espaço digital</p>
+        <p> ea se posiciona e é vista no espaço digital</p>
         
         <button class="b-btn">Saiba Mais</button>
 
